content/plataformes/canigo/entorn-de-desenvolupament/plugin-eclipse/1.8.4/llistat-de-canvis.md
+++
date        = "2022-04-13"
title       = "Llistat de canvis"
description = "Llistat de canvis plugin eclipse 1.8.4"
sections    = "canigo-fwk-docs"
weight		= 1
+++

## Plugin eclipse 1.8.4

- [Actualització de l’_archetype_ 1.7.4 i del _plugin_ Eclipse 1.8.4](/noticies/2022-04-13-CAN-Actualitzacio_archetype_1_7_4_plugin_eclipse_1_8_4)
   - Actualització de l’_archetype_ versió 1.7.4 i del _plugin_ de l'Eclipse de Canigó versió 1.8.4 per a generar projectes amb Canigó 3.6.4.

## Plugin eclipse 1.8.3

- [Actualització de l’_archetype_ 1.7.3 i del _plugin_ Eclipse 1.8.3](/noticies/2021-12-27-CAN-Actualitzacio_archetype_1_7_3_plugin_eclipse_1_8_3)
   - Actualització de l’_archetype_ versió 1.7.3 i del _plugin_ de l'Eclipse de Canigó versió 1.8.3 per a generar projectes amb Canigó 3.6.3.

## Plugin eclipse 1.8.2

- [Actualització de l’_archetype_ 1.7.2 i del _plugin_ Eclipse 1.8.2](/noticies/2021-12-17-CAN-Actualitzacio_archetype_1_7_2_plugin_eclipse_1_8_2)
   - Actualització de l’_archetype_ versió 1.7.2 i del _plugin_ de l'Eclipse de Canigó versió 1.8.2 per a generar projectes amb Canigó 3.6.2.

## Plugin eclipse 1.8.1

- [Actualització de l’_archetype_ 1.7.1 i del _plugin_ Eclipse 1.8.1](/noticies/2021-12-13-CAN-Actualitzacio_archetype_1_7_1_plugin_eclipse_1_8_1)
   - Actualització de l’_archetype_ versió 1.7.1 i del _plugin_ de l'Eclipse de Canigó versió 1.8.1 per a generar projectes amb Canigó 3.6.1.

## Plugin eclipse 1.8.0

- [Actualització de l’_archetype_ 1.7.0 i del _plugin_ Eclipse 1.8.0](/noticies/2021-10-25-CAN-Actualitzacio_archetype_1_7_0_plugin_eclipse_1_8_0)
   - Actualització de l’_archetype_ versió 1.7.0 i del _plugin_ de l'Eclipse de Canigó versió 1.8.0 per a generar projectes amb Canigó 3.6.0.